# xtax

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.cline/rules/: 00-rust-api-guidelines.md  01-git-workflow.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-xtax-blob-storage.yml  publish-xtax-encryption.yml  publish-xtax.yml  release.yml
crates/xtax-blob-storage/: Cargo.toml  LICENSE-MIT  README.md
crates/xtax-blob-storage/docs/: architecture.md  backends.md  builder.md  cleanup.md  encryption.md  error-handling.md  filters.md  guide.md  index.md  layers.md  logging.md
crates/xtax-blob-storage/src/: blob_store.rs  builder.rs  cleanup.rs  encrypt.rs  error.rs  fs.rs  lib.rs  list_filter.rs  prefix.rs  s3.rs  types.rs  validate.rs  visitor.rs
crates/xtax-blob-storage/src/builder/: backend.rs  maintenance.rs  strategies.rs
crates/xtax-blob-storage/src/cleanup/: visitor.rs
crates/xtax-blob-storage/src/encrypt/: rekey.rs  store.rs  visitors.rs
crates/xtax-blob-storage/src/fs/: store.rs
crates/xtax-blob-storage/src/s3/: multipart.rs  single.rs  store.rs
crates/xtax-blob-storage/tests/: backend_test.rs  builder_test.rs  cleanup_test.rs  edge_cases_test.rs  encrypt_test.rs  s3_multipart_test.rs  strategy_test.rs  validate_test.rs  visitor_test.rs
crates/xtax-blob-storage/tests/common/: collecting_visitor.rs  encrypt.rs
crates/xtax-encryption/: Cargo.toml  README.md
crates/xtax-encryption/src/: lib.rs
src/: lib.rs
