[package]
name = "xtax"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "xTax Rust infrastructure ecosystem — a Cargo workspace of independent, composable crates."
documentation = "https://docs.rs/xtax"
readme = "README.md"
keywords = ["xtax", "facade", "infrastructure"]
categories = ["development-tools"]

exclude = [
    "/.cline/**",
    "/.github/**",
    "/.idea/**",
    "/crates/**",
]

[features]
default = []

blob-storage = ["dep:xtax-blob-storage", "xtax-blob-storage/fs"]
blob-storage-s3 = ["dep:xtax-blob-storage", "xtax-blob-storage/s3"]
blob-storage-full = ["blob-storage", "blob-storage-s3"]
encryption = ["dep:xtax-encryption"]
full = ["blob-storage-full", "encryption"]

[dependencies]
xtax-blob-storage = { version = "0.1.0", path = "crates/xtax-blob-storage", optional = true, default-features = false }
xtax-encryption = { version = "0.1.0", path = "crates/xtax-encryption", optional = true }

[workspace]
members = [
    "crates/xtax-blob-storage",
    "crates/xtax-encryption",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.91.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cz-jcode/xtax"
homepage = "https://github.com/cz-jcode/xtax"
authors = ["Kamil Sopko"]