[package]
name = "xtax-encryption"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Trait-only encryption provider interface — used by xtax-blob-storage and other crates."
documentation = "https://docs.rs/xtax-encryption"
readme = "README.md"
keywords = ["encryption", "trait", "blob", "storage"]
categories = ["cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1.52", features = ["io-util"] }
thiserror = "2.0"